--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.39.0",
     "eslint-config-next": "^16.0.1",
